<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        app:layout_constraintCircleRadius="20dp"
        android:contentDescription="@string/profile_image"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:fontFamily="@font/font_of_username"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintStart_toEndOf="@id/image_profile"
        />
    <TextView
        android:id="@+id/post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_time"
        android:fontFamily="@font/font_of_post_txt"
        android:textColor="@color/gray_color"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_public"
        android:contentDescription="@string/public_post_type"
        app:layout_constraintStart_toEndOf="@+id/post_time"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_post"
        android:textSize="20sp"
        android:fontFamily="@font/font_of_post_txt"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"

        />
    <TextView
        android:id="@+id/link_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_link"
        android:textSize="20sp"
        android:fontFamily="@font/font_of_link"
        android:textColor="@color/blue"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_text"

        />

    <ImageView
        android:id="@+id/image_post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:scaleType="fitXY"
        app:layout_constraintHeight_percent="0.5"
        android:src="@drawable/image_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_post"
        />
    <TextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        android:textColor="@color/gray_color"
        android:drawableStart="@drawable/like"
        android:drawablePadding="3dp"
        app:layout_constraintBottom_toTopOf="@id/line_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_post"
        />

    <TextView
        android:id="@+id/count_comment_and_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:drawablePadding="3dp"
        android:text="@string/reaction"
        android:textColor="@color/gray_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/line_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_post"
         />


    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_color"
        android:layout_marginTop="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/image_post"
        />
    <LinearLayout
        android:id="@+id/react"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/line_view"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/react_color"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/icon_like"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="20sp"
            android:textColor="@color/react_color"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/icon_comment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/react_color"
            android:drawableStart="@drawable/icon_share"
            android:drawablePadding="5dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_color"
        app:layout_constraintTop_toBottomOf="@id/react"
        />
</androidx.constraintlayout.widget.ConstraintLayout>